kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: system-craft-service
spec:
  selector:
    app: system-craft
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
